[package]
name = "cryptopals_solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
libc = "0.2"
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
